<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CAPSULE</string>

    <string name="str_join">가입하기</string>
    <string name="str_log_in">로그인</string>
    <string name="str_email">이메일</string>
    <string name="str_password">비밀번호</string>
    <string name="str_first_name">이름</string>
    <string name="str_last_name">성</string>
    <string name="str_retype_password">"비밀번호 확인"</string>
    <string name="str_back">돌아가기</string>
    <string name="str_profile_image">"프로필 이미지"</string>
    <string name="str_select">선택</string>
    <string name="str_nickname">닉네임</string>
    <string name="str_not_available">"사용 불가"</string>
    <string name="str_available">"사용 가능"</string>

    <string name="str_join_complete">"님의 캡슐이 생성되었습니다."</string>
    <string name="str_join_cancel">"캡슐 생성을 취소합니다."</string>
    <string name="str_forgot_account">"계정을 잊으셨나요?"</string>

    <string name="str_error_empty_first_name">"이름을 입력해 주세요."</string>
    <string name="str_error_empty_last_name">"성을 입력해 주세요."</string>
    <string name="str_error_empty_email">"이메일을 입력해 주세요."</string>
    <string name="str_error_empty_password">"비밀번호를 입력해 주세요."</string>
    <string name="str_error_empty_nickname">"닉네임을 입력해 주세요."</string>
    <string name="str_error_different_password">"비밀번호가 서로 다릅니다."</string>
    <string name="str_error_duplicated_email">"이미 등록된 이메일 입니다."</string>
    <string name="str_error_nonexistent_email">"존재하지 않는 이메일 입니다."</string>
    <string name="str_error_incorrect_password">"비밀번호가 일치하지 않습니다."</string>
    <string name="str_error_incorrect">"입력 정보가 올바르지 않습니다."</string>
    <string name="str_error_duplicated_nickname">이미 존재하는 닉네임 입니다.</string>
    <string name="str_total_content">총 게시물:</string>
    <string name="str_content_request_details">내용을 입력해 주세요</string>
    <string name="str_upload">업로드</string>
    <string name="str_tag">Tag</string>
    <string name="str_image_upload">이미지 업로드</string>
    <string name="str_reg">등록</string>
    <string name="str_phone">전화번호</string>
    <string name="str_auth">인증</string>
    <string name="str_error_empty_phone">전화번호를 입력해 주세요</string>
    <string name="str_error_auth_overtime">인증시간이 초과되었습니다.</string>
    <string name="str_error_auth_incorrect">인증번호가 올바르지 않습니다.</string>
    <string name="str_error_phone_incomplete_auth">핸드폰 인증을 완료하지 않았습니다.</string>
    <string name="str_error_user_found">일치하는 사용자가 없습니다.</string>
    <string name="str_location">게시물에 현재 위치를 남기려면 GPS 아이콘을 누르세요</string>


</resources>