<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.co.teamnova.chad.capsule.LoginPageActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:maxLines="1"
            android:hint="@string/str_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:ems="16"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:paddingStart="10dp" />

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_log_in"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_join"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:text="@string/str_join"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#99ff0000"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_forgotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/str_forgot_account"
        android:textColor="#880000ff" />


</RelativeLayout>
