<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:background="@drawable/frame_round"
                    android:padding="5dp"
                    android:src="@mipmap/image_user" />

                <TextView
                    android:id="@+id/text_image"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_profile_image"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/layout_profile"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/frame_round"
                    android:hint="@string/str_first_name"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="10dp" />

                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/frame_round"
                    android:hint="@string/str_last_name"
                    android:imeOptions="actionNext|flagNoEnterAction"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="10dp" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:background="@drawable/frame_round"
                android:hint="@string/str_nickname"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp" />

            <TextView
                android:id="@+id/text_check_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/edit_nickname"
                android:gravity="center"
                android:text=""
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/frame_round"
            android:hint="@string/str_email"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/edit_phone"
            android:maxLines="1"
            android:paddingStart="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="9"
                android:background="@drawable/frame_round"
                android:hint="@string/str_phone"
                android:nextFocusDown="@id/btn_auth"
                android:inputType="phone"
                android:paddingStart="10dp" />

            <Button
                android:id="@+id/btn_auth"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:background="@android:drawable/btn_default"
                android:text="@string/str_auth" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_phone_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_auth_check"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:background="@android:drawable/btn_default"
                android:text="확인" />

            <EditText
                android:id="@+id/edit_auth_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/btn_auth_check"
                android:ems="4"
                android:nextFocusDown="@id/btn_auth_check"
                android:hint="인증번호"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="10dp" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_auth_check"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/edit_auth_check"
                android:text="3:00"
                android:textSize="20sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/frame_round"
            android:hint="@string/str_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/edit_retype_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/frame_round"
            android:hint="@string/str_retype_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/text_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#99ff0000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:text="@string/str_join"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:text="@string/str_back"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>